# Multi-path-intelligent-parking-system

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain.rk3588.cmake
config/: cameras.yaml
deploy/: wrapper.sh
include/: camera_input.h  detector.h  encoder.h  llm_engine.h  pipeline.h  tracker.h
scripts/: build.sh  start_rtsp.sh  sync_sysroot.sh
src/: camera_input.cc  detector.cc  encoder.cc  main.cc  main_gui.cc  main_gui.cc.bak  main_gui_v10.cc  main_gui_v11.cc  main_gui_v12.cc  main_gui_v13.cc  main_gui_v14.cc  main_gui_v15.cc  main_gui_v16.cc  main_gui_v17.cc  main_gui_v18.cc  main_gui_v19.cc  main_gui_v20.cc  main_gui_v21.cc  main_gui_v22.cc  main_gui_v23.cc  main_gui_v24.cc  main_gui_v25.cc  main_gui_v26.cc  main_gui_v27.cc  main_gui_v28.cc  main_gui_v29.cc  main_gui_v2_backup.cc  main_gui_v30.cc  main_gui_v32.cc  main_gui_v33.cc  main_gui_v37.cc  main_gui_v38.cc  main_gui_v39.cc  main_gui_v40.cc  pipeline.cc  tracker.cc
